Change sample main.js -> main.ts and Add type VertexAttributeSet

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "npx tsc --project . --module es2015 --outDir ./dist",
+    "sample-build": "npx tsc ./samples/main.ts --lib es2015,dom --target esNext",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx http-server ./ -o"
   },
