--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "sourceMap": true,
     "lib": ["dom", "ES2018"],
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
