add handing camera info in Gltf2Importer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "fovy"
+        "fovy",
+        "xmag",
+        "yfov",
+        "ymag",
+        "zfar",
+        "znear"
     ]
 }
